version/0.12/_sources/api/solver/_autosummary/settings/mesh_2.rst.txt
:orphan:

.. _mesh_2:

mesh
====

.. currentmodule:: ansys.fluent.core.solver.settings_231.mesh_2

.. autoclass:: mesh
    :show-inheritance:
    :undoc-members:
.. rubric:: Commands

========================================   =============================================

Command                                                                          Summary

========================================   =============================================
:ref:`display <display_1>`                                      Display graphics object.

:ref:`copy <copy_3>`                                               Copy graphics object.

:ref:`add_to_graphics <add_to_graphics>`       Add graphics object to existing graphics.

:ref:`clear_history <clear_history>`                               Clear object history.

========================================   =============================================

.. rubric:: Named object type

:ref:`mesh_child <mesh_child_1>`


.. rubric:: Included in:

==========================   =====================

Parent                                     Summary

==========================   =====================
:ref:`graphics <graphics>`       'graphics' child.

==========================   =====================

